--- a/74/index.html
+++ b/74/index.html
@@ -9,19 +9,16 @@
 <body>
 
   <div class="form search-area">
-    <div class="search-options-vertical">
-      <label>
-        <input type="radio" name="searchType" value="name" checked>
-        ポケモン名
-      </label>
-      <label>
-        <input type="radio" name="searchType" value="place">
-        場所
-      </label>
-      <label>
-        <input type="radio" name="searchType" value="weather">
-        天気
-      </label>
+    <div class="search-options-2col">
+      <div class="search-col">
+        <label><input type="radio" name="searchType" value="name" checked> ポケモン名</label>
+        <label><input type="radio" name="searchType" value="place"> 場所</label>
+        <label><input type="radio" name="searchType" value="weather"> 天気</label>
+      </div>
+      <div class="search-col">
+        <label><input type="radio" name="searchType" value="timeSlot"> 時間帯</label>
+        <label><input type="radio" name="searchType" value="type"> タイプ</label>
+      </div>
     </div>
 
     <input type="text" id="searchBox" placeholder="検索">
@@ -33,6 +30,8 @@
     <input type="text" id="pokemonName" placeholder="ポケモン名">
     <input type="text" id="place" placeholder="場所">
     <input type="text" id="weather" placeholder="天気">
+    <input type="text" id="timeSlot" placeholder="時間帯">
+    <input type="text" id="type" placeholder="タイプ">
     <button id="addButton">記録する</button>
   </div>
 
@@ -40,3 +39,4 @@
 
 </body>
 </html>
+
