--- a/74/index.html
+++ b/74/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>ポケモン獲得記録アプリ</title>
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/script.js"></script>
+  <script src="js/script.js" defer></script>
 </head>
 <body>
 
@@ -39,6 +39,7 @@
 
 </body>
 </html>
+
 
 
 
